# qt_temp

./: CMakeLists.txt  Main.qml  main.cpp
